corpus/cpp/designated_init/case-01/snapshots/gcc13_14/native_text_capture/render.concise.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [designated_init] designated initializer error @ src/main.cpp:7:41
help: reorder the designators to match the declaration order or check the member name
raw : src/main.cpp:7:41: error: designator order for field ‘Config::port’ does not match declaration order in ‘Config’
| src/main.cpp:7:41
|     Config cfg{.timeout = 30, .port = 10};
|                                         ^
raw:
  src/main.cpp:7:41: error: designator order for field ‘Config::port’ does not match declaration order in ‘Config’
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output